# forkcell

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/workflows/: beforewire-agent-gate.yml  preview-smoke.yml
docs/: architecture.md  benchmark-matrix.md  evidence-summary.md  openshell-native-fast-substrate.md  rust-core-boundary.md  testing-plan.md
examples/agent-readiness-pack/: .gitignore  README.md
examples/agent-readiness-pack/fixtures/: openshell-credentials.yaml
examples/agent-readiness-pack/github/: beforewire-agent-gate.yml
examples/agent-readiness-pack/packets/: BW-P001-baseline-readonly.yaml  BW-P002-dotenv-secret-read.yaml  BW-P003-secret-to-egress.yaml  BW-P004-mcp-tool-poisoning.yaml  BW-P005-mcp-drift-rugpull.yaml  BW-P006-shell-curl-sh.yaml  BW-P007-nested-shell-bypass.yaml  BW-P008-ci-workflow-tamper.yaml  BW-P009-dependency-postinstall.yaml  BW-P010-receipt-tamper-verify.yaml  BW-P011-human-approval-wait.yaml  BW-P012-broker-dryrun-side-effect.yaml
examples/agent-readiness-pack/policies/: agt-manifest.yaml  agt.rego  openshell.yaml
forkcell/: README.md  __init__.py  api.py  checkpoint.py  cli.py  native.py  overlay.py  volume.py
patches/: README.md  openshell-workspace-substrate-2026-06-19.patch  openshell-workspace-substrate-rfc.md
scripts/: benchmark_matrix.sh  benchmark_typical_scenarios.py  build_patched_openshell_runtime.sh  run_source_runtime_demo.sh  start_patched_openshell_gateway.sh  stop_patched_openshell_gateway.sh  validate_public_smoke.sh  validate_pypi_quickstart.sh  validate_security_bindings.py
(+5 files in other folders)
